@@ -259,6 +259,9 @@ procman_data_new (void)
 		("/apps/procman/swap_green", 52130);
 	pd->config.swap_color.blue = get_gconf_int_with_default
 		("/apps/procman/swap_blue", 18595);
+		
+	pd->config.whose_process = 0;
+	pd->config.show_more_info = FALSE;
 #if 0
 	procman_get_save_files (pd);
 
