@@ -1,3 +1,14 @@
+2001-11-04  Kevin Vandersloot <kfv101@psu.edu>
+
+	* Makefile.am: no longer need to link to pthread stuff
+
+	* callbacks.c: double click toggles info tab
+
+	* prettytable.c: work with libwnck
+
+	* procactions.c: bring back root dialog stuff but doesn't seem
+	to work
+
 2001-10-31  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procdialogs.c: some porting to GtkDialog
